--- a/MongoDB_Commands.ipynb
+++ b/MongoDB_Commands.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOX/USZ8TBh1GLpGZNHboin",
+      "authorship_tag": "ABX9TyPYJHQ+Y0eaHKQ7MmLG6sZK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -430,7 +430,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DELETE"
+        "**DELETE**"
       ],
       "metadata": {
         "id": "-wSO9cPPB2rq"
